container: Enable compact object headers